--- a/app/src/sass/helpers/_main.sass
+++ b/app/src/sass/helpers/_main.sass
@@ -157,9 +157,12 @@ body
   @media screen and ( max-width: 1366px )
     width: 340px
     height: 340px
+  @media screen and ( max-width: 767px )
+    transform: scale(1)
   @media screen and ( max-width: 400px )
     width: 240px
     height: 240px
+
   &.scale
     transform: scale(1)
     transition: all 0.4s
