--- a/app/src/sass/components/popup.sass
+++ b/app/src/sass/components/popup.sass
@@ -49,6 +49,36 @@
         width: 100%
         margin: 0px
         height: 100%
+  &-video
+    .popup-container
+      width: 1366px
+      height: 650px
+      padding: 0
+      background-color: transparent
+      @media screen and ( max-width: 1366px )
+        width: 950px
+        height: 500px
+      @media screen and ( max-height: 780px )
+        padding: 20px 20px 0px 20px
+        height: 400
+      @media screen and ( max-height: 700px )
+        width: 100%
+      @media screen and ( max-width: 950px )
+        width: 100%
+        padding: 20px 20px 0px 20px
+        height: 400px
+      iframe
+        width: 100%
+        height: 100%
+        position: relative
+        z-index: 100
+      .popup-close
+        top: -40px
+        right: 0px
+        @media screen and ( max-width: 950px )
+          right: 40px
+        @media screen and ( max-height: 700px )
+          right: 40px
 
   &-thanks
     .popup-container
