--- a/app/src/sass/components/pages/about.sass
+++ b/app/src/sass/components/pages/about.sass
@@ -359,6 +359,12 @@
     position: relative
     width: 100%
     height: 450px
+    opacity: 0
+    animation-name: opacity
+    animation-duration: 0.1s
+    animation-delay: 3.2s
+    animation-iteration-count: 1
+    animation-fill-mode: forwards
     @media screen and ( max-width: 1366px )
       height: 395px
   &-elem
@@ -368,9 +374,13 @@
     bottom: 0
     left: 0px
     bottom: 0
+    animation-name: flying, rotating
+    animation-timing-function: linear
+    animation-iteration-count: infinite
     animation-duration: 1s
-    animation: flying infinite linear
     background-image: url(/app/build/img/wheats-sprite.png)
+    &:nth-child(2n)
+      animation-name: flying, rotatingReverse
     img
       width: auto
       height: auto
@@ -418,3 +428,19 @@
 @keyframes flying
   100%
     left: 100%
+@keyframes rotating
+  0%
+    transform: rotateZ(0deg)
+  100%
+    transform: rotateZ(360deg)
+@keyframes rotatingReverse
+  0%
+    transform: rotateZ(360deg)
+  100%
+    transform: rotateZ(0deg)
+
+@keyframes opacity
+  0%
+    opacity: 0
+  100%
+    opacity: 1
