--- a/app/src/sass/components/index.sass
+++ b/app/src/sass/components/index.sass
@@ -1,14 +1,7 @@
 @import ./header
 @import ./default
-@import ./video-section
-@import ./products
-@import ./about
-@import ./partners
-@import ./map
-@import ./news
 @import ./footer
 @import ./popup
 @import ./form
-@import ./burger
-@import ./banner
+@import ./blocks
 @import ./pages
