правки по валидатору

--- a/app/src/sass/components/form.sass
+++ b/app/src/sass/components/form.sass
@@ -161,6 +161,7 @@
           opacity: 1
           transition: all 0.4s
   &__box
+    display: block
     width: 30px
     height: 30px
     min-width: 30px
