--- a/app/src/sass/components/default.sass
+++ b/app/src/sass/components/default.sass
@@ -100,7 +100,7 @@ h3
     width: 100%
   img
     max-width: 100%
-    width: auto
+    width: 100%
     object-fit: contain
     margin-top: 32px
     margin-bottom: 29px
