--- a/app/src/sass/components/pages/catalog.sass
+++ b/app/src/sass/components/pages/catalog.sass
@@ -29,6 +29,9 @@
         max-width: 960px
       @media screen and ( max-width: 550px )
         flex-direction: column
+    &__wrapper
+      position: relative
+      z-index: 10
 
     &__name
       font-size: 60px
