--- a/app/src/sass/components/pages/catalog.sass
+++ b/app/src/sass/components/pages/catalog.sass
@@ -39,7 +39,6 @@
       display: inline-block
       line-height: 45px
       margin-bottom: 46px
-      border-bottom: 1px solid rgba(217,217,217,1)
       transition: all 0.4s
       @media screen and ( max-width: 1366px )
         font-size: 47px
@@ -55,6 +54,13 @@
         margin-right: 0px
       &:hover
         border-bottom-color: rgba(217,217,217,0)
+      .underline
+        span
+          top: 20px
+          @media screen and ( max-width: 1366px )
+            top: 16px
+          @media screen and ( max-width: 767px )
+            top: 11px
     &__number
       font-size: 28px
       line-height: 42px
