--- a/app/src/sass/components/pages/product.sass
+++ b/app/src/sass/components/pages/product.sass
@@ -22,6 +22,9 @@
         line-height: 22px
       &:hover
         border-bottom-color: rgba(0, 0, 0, 0)
+      .underline
+        span
+          top: 6px
 .product
   margin-top: 62px
   overflow: hidden
