--- a/app/src/sass/components/blocks/news.sass
+++ b/app/src/sass/components/blocks/news.sass
@@ -89,8 +89,7 @@
       font-size: 28px
       line-height: 32px
       color: #000
-      display: flex
-      margin-top: 2px
+      margin-top: -5px
       @media screen and ( max-width: 1366px )
         font-size: 24px
         line-height: 28px
@@ -100,15 +99,13 @@
       @media screen and ( max-width: 550px )
         font-size: 18px
         line-height: 24px
-
-      &:hover
+      .underline
         span
-          border-color: rgba(229,229, 229,0)
-      &-over
-        line-height: 32px
-        span
-          border-bottom: 1px solid rgba(229,229, 229,1)
-          transition: all 0.4s
+          top: 8px
+          @media screen and ( max-width: 1366px )
+            top: 6px
+          @media screen and ( max-width: 767px )
+            top: 5px
     &__img
       position: relative
       width: 100%
