--- a/app/src/sass/components/header.sass
+++ b/app/src/sass/components/header.sass
@@ -54,7 +54,7 @@
     visibility: hidden
     transition: all 0.5s 0.2s
     &:hover
-      top: 85px
+      top: 55px
       opacity: 1
       visibility: visible
       transition: all 0.5s 0.2s
@@ -65,6 +65,8 @@
       margin-bottom: 15px
       display: block
       white-space: nowrap
+      @media screen and ( max-width: 1366px )
+        font-size: 18px
       &:last-child
         margin-bottom: 0px
       &:hover
@@ -93,6 +95,13 @@
     position: absolute
     top: 0
     left: 0
+    .container
+      max-width: none
+      padding: 0 70px
+      @media screen and ( max-width: 1885px )
+        padding: 0px 50px
+      @media screen and ( max-width: 767px )
+        padding: 0px 20px
   .header-logo--main
     display: block
   .header-logo--inner
@@ -105,3 +114,6 @@
     color: #000
     a
       color: #000
+    &:hover
+      a
+        color: $orange
