--- a/app/src/sass/components/pages/shops.sass
+++ b/app/src/sass/components/pages/shops.sass
@@ -103,6 +103,7 @@
     background-color: $orange
     padding: 0px 15px
     border-radius: 12.5px
+    transition: all 0.4s
     @media screen and ( max-width: 1366px )
       font-size: 16px
       line-height: 23px
@@ -110,6 +111,8 @@
     @media screen and ( max-width: 550px )
       font-size: 14px
       line-height: 18px
+    &:hover
+      background-color: $orangehover
   &-number
     position: relative
     padding-left: 39px
