--- a/app/src/sass/helpers/_main.sass
+++ b/app/src/sass/helpers/_main.sass
@@ -94,6 +94,7 @@ body
   height: 180px
   margin-top: 6px
   margin-right: 4px
+  transition: all 0.4s
   @media screen and ( max-width: 1366px )
     width: 160px
     height: 160px
@@ -108,6 +109,8 @@ body
     margin: 0
   @media screen and ( max-width: 400px )
     margin: 20px auto 0px
+  &:hover
+    background-color: $orangehover
   a
     font-size: 22px
     line-height: 26px
@@ -201,6 +204,9 @@ body
     line-height: 28px
     padding: 11px 36px 12px
     border-radius: 28px
+    transition: all 0.4s
+    &:hover
+      background-color: $orangehover
     @media screen and ( max-width: 1366px )
       font-size: 20px
       line-height: 26px
@@ -216,6 +222,9 @@ body
     line-height: 24px
     padding: 15px 36px 15px
     border-radius: 28px
+    transition: all 0.4s
+    &:hover
+      background-color: $orangehover
 
 .no-overflow
   overflow-y: hidden !important
@@ -241,7 +250,7 @@ body
       display: block
       color: $gray
       position: absolute
-      top: 4px
+      top: 10px
       right: 0
       @media screen and ( max-width: 1366px )
         top: 2px
@@ -251,13 +260,13 @@ body
       font-size: 18px
       line-height: 24px
       color: $gray
-      border-bottom: 1px solid rgba(103, 103, 103, 0.1)
       transition: all 0.4s
       @media screen and ( max-width: 1366px )
         font-size: 16px
         line-height: 22px
-      &:hover
-        border-bottom-color: rgba(103, 103, 103, 0)
+      .underline
+        span
+          top: 5px
 
 .page-title
   max-width: 970px
@@ -282,6 +291,7 @@ body
   border-radius: 20px
   padding: 7px 45px 5px 22px
   position: relative
+  transition: all 0.4s
   @media screen and ( max-width: 1366px )
     font-size: 18px
     line-height: 24px
@@ -290,19 +300,32 @@ body
     line-height: 22px
   &::before
     content: ""
-    width: 11px
+    width: 6px
     height: 6px
     position: absolute
-    top: 18px
+    top: 19px
     right: 24px
-    background-image: url(/app/build/img/toggle-arrow.png)
-    background-repeat: no-repeat
-    background-size: contain
+    border-top: 1px solid #000
+    border-left: 1px solid #000
+    transform: rotate(45deg)
     @media screen and ( max-width: 550px )
       top: 15px
+  &:hover
+    border-color: $orangehover
+    transition: all 0.4s
+    &::before
+      border-color: $orangehover
+      transition: all 0.4s
+    span
+      color: $orangehover
+      transition: all 0.4s
+  span
+    color: #000
+    transition: all 0.4s
   &.btn-show
     &::before
-      transform: rotate(180deg)
+      transform: rotate(225deg)
+      top: 15px
     .show
       display: inline
     .hide
@@ -312,3 +335,13 @@ body
       display: none
     .hide
       display: inline
+
+.underline
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1)
+  transition: all 0.4s
+  &:hover
+    border-bottom-color: rgba(0, 0, 0, 0)
+    transition: all 0.4s
+  span
+    position: relative
+    top: 8px
