--- a/app/src/sass/components/blocks/about.sass
+++ b/app/src/sass/components/blocks/about.sass
@@ -22,7 +22,7 @@
       margin-top: 0px
     &:nth-child(2n)
       margin-bottom: 0px
-    h2
+    .section-text
       margin-bottom: 40px
       @media screen and ( max-width: 1366px )
         margin-bottom: 45px
