--- a/app/src/sass/components/blocks/burger.sass
+++ b/app/src/sass/components/blocks/burger.sass
@@ -60,11 +60,12 @@
       align-items: flex-start
   &-item
     margin-bottom: 20px
-    font-size: 20px
-    line-height: 28px
+    font-size: 36px
+    line-height: 44px
     color: #000
-    @media screen and ( max-width: 1366px )
-      font-size: 18px
+    @media screen and ( max-width: 550px )
+      font-size: 24px
+      line-height: 28px
     a
       color: #000
       transition: all 0.4s
@@ -72,10 +73,15 @@
         color: $orange
         transition: all 0.4s
   &-submenu
-    padding-left: 20px
-    padding-top: 15px
-  &-subitem
-    margin-bottom: 10px
+    padding-left: 0px
+    padding-top: 5px
+    &__item
+      font-size: 20px
+      line-height: 26px
+      margin-bottom: 2px
+      @media screen and ( max-width: 550px )
+        font-size: 18px
+        line-height: 22px
   &-tel
     margin-bottom: 20px
     @include dfc()
@@ -84,7 +90,7 @@
       line-height: 28px
       color: #000
       transition: all 0.4s
-      @media screen and ( max-width: 1366px )
+      @media screen and ( max-width: 550px )
         font-size: 18px
         line-height: 26px
       &:hover
@@ -95,7 +101,7 @@
       font-size: 20px
       line-height: 28px
       color: #000
-      @media screen and ( max-width: 1366px )
+      @media screen and ( max-width: 550px )
         font-size: 18px
         line-height: 26px
   &-email
@@ -106,7 +112,7 @@
       color: #000
       transition: all 0.4s
       border-bottom: 1px solid rgba(255,255,255,0.1)
-      @media screen and ( max-width: 1366px )
+      @media screen and ( max-width: 550px )
         font-size: 18px
         line-height: 26px
       &:hover
