--- a/app/src/sass/components/form.sass
+++ b/app/src/sass/components/form.sass
@@ -33,6 +33,8 @@
         resize: none
         height: calc(100% - 21px)
         margin: 0px
+        @media screen and ( max-width: 600px )
+          height: 150px
         @media screen and ( max-width: 550px )
           font-size: 16px
           line-height: 20px
@@ -184,7 +186,7 @@
       left: 7px
       opacity: 0
       transition: all 0.4s
-  p
+  span
     font-size: 18px
     line-height: 22px
     color: #000
