--- a/app/src/sass/helpers/_main.sass
+++ b/app/src/sass/helpers/_main.sass
@@ -102,11 +102,10 @@ body
     width: 115px
     height: 115px
   @media screen and ( max-width: 550px )
-    width: 90px
-    min-width: 90px
-    height: 90px
-    min-height: 90px
-    margin: 0
+    padding: 15px 25px 15px
+    border-radius: 28px
+    width: auto
+    height: auto
   @media screen and ( max-width: 400px )
     margin: 20px auto 0px
   &:hover
@@ -120,6 +119,7 @@ body
     height: 100%
     justify-content: center
     align-items: center
+    border: none
     @media screen and ( max-width: 1366px )
       font-size: 20px
       line-height: 24px
@@ -127,8 +127,9 @@ body
       font-size: 16px
       line-height: 20px
     @media screen and ( max-width: 550px )
-      font-size: 14px
-      line-height: 18px
+      font-size: 18px
+      line-height: 24px
+      margin-top: 0px
     @media screen and ( max-width: 400px )
       margin-top: 0px
 
@@ -213,6 +214,7 @@ body
     @media screen and ( max-width: 550px )
       font-size: 18px
       line-height: 24px
+      padding: 11px 25px 12px
 
 .btn
   &--orange
@@ -223,6 +225,8 @@ body
     padding: 15px 36px 15px
     border-radius: 28px
     transition: all 0.4s
+    @media screen and ( max-width: 550px )
+      padding: 15px 25px 15px
     &:hover
       background-color: $orangehover
 
