--- a/app/src/sass/helpers/_main.sass
+++ b/app/src/sass/helpers/_main.sass
@@ -254,12 +254,18 @@ body
       display: block
       color: $gray
       position: absolute
-      top: 10px
+      top: 8px
       right: 0
       @media screen and ( max-width: 1366px )
         top: 2px
     &:last-child
       margin-right: 0px
+      &::after
+        display: none
+      a
+        pointer-events: none
+        .underline
+          border-bottom-color: transparent
     a
       font-size: 18px
       line-height: 24px
