--- a/app/src/sass/components/pages/about.sass
+++ b/app/src/sass/components/pages/about.sass
@@ -52,16 +52,9 @@
         line-height: 50px
         text-align: center
     &__sub
-      font-size: 22px
-      line-height: 32px
       color: #fff
       @media screen and ( max-width: 1366px )
-        font-size: 20px
-        line-height: 28px
         margin-top: 7px
-      @media screen and ( max-width: 550px )
-        font-size: 16px
-        line-height: 20px
   &-button
     @include dfr()
     justify-content: center
@@ -104,13 +97,18 @@
     margin: 0 auto
     position: relative
     z-index: 2
-    @media screen and ( max-width: 1366px )
+    @media screen and ( max-width: 1500px )
       font-size: 28px
       line-height: 38px
+    @media screen and ( max-width: 1366px )
       max-width: 750px
-    @media screen and ( max-width: 550px )
-      font-size: 24px
+    @media screen and ( max-width: 767px )
+      font-size: 22px
       line-height: 28px
+    @media screen and ( max-width: 550px )
+      font-size: 18px
+      line-height: 22px
+
   &__text
     font-size: 19px
     line-height: 32px
@@ -120,13 +118,13 @@
     position: relative
     z-index: 2
     @media screen and ( max-width: 1366px )
-      font-size: 20px
-      line-height: 32px
       max-width: 680px
     @media screen and ( max-width: 767px )
       margin-top: 30px
-    @media screen and ( max-width: 550px )
       font-size: 18px
+      line-height: 24px
+    @media screen and ( max-width: 550px )
+      font-size: 16px
       line-height: 22px
   &__container
     height: 738px
@@ -212,12 +210,20 @@
     width: 100%
     padding-left: 20px
     padding-right: 20px
+  @media screen and ( max-width: 550px )
+    padding-top: 20px
   &__title
     font-size: 60px
     line-height: 64px
     @media screen and ( max-width: 1366px )
       font-size: 48px
-      line-height: 54px
+      line-height: 52px
+    @media screen and ( max-width: 767px )
+      font-size: 30px
+      line-height: 38px
+    @media screen and ( max-width: 550px )
+      font-size: 24px
+      line-height: 30px
 
   &__desc
     @include dfr()
@@ -225,17 +231,12 @@
     @media screen and ( max-width: 950px )
       flex-direction: column
     p
-      font-size: 22px
-      line-height: 32px
       max-width: 675px
       @media screen and ( max-width: 1366px )
-        font-size: 20px
-        line-height: 30px
         max-width: 540px
       @media screen and ( max-width: 950px )
         max-width: none
         margin-bottom: 20px
-
 
 .facts
   @include dfc()
@@ -243,6 +244,8 @@
   margin-bottom: 132px
   @media screen and ( max-width: 1366px )
     margin-bottom: 92px
+  @media screen and ( max-width: 767px )
+    margin-top: 0px
   &-item
     @include dfr()
     justify-content: space-between
@@ -256,13 +259,16 @@
       max-width: 650px
       @media screen and ( max-width: 1366px )
         font-size: 38px
-        line-height: 44px
+        line-height: 42px
       @media screen and ( max-width: 1100px )
-        font-size: 30px
-        line-height: 38px
         max-width: 400px
       @media screen and ( max-width: 767px )
+        font-size: 26px
+        line-height: 35px
         max-width: none
+      @media screen and ( max-width: 550px )
+        font-size: 20px
+        line-height: 28px
 
     &__wrapper
       @include dfc()
@@ -290,15 +296,10 @@
       @media screen and ( max-width: 550px )
         font-size: 40px
         line-height: 50px
-        text-align: center
 
     &__desc
-      font-size: 22px
-      line-height: 32px
       max-width: 380px
       @media screen and ( max-width: 1366px )
-        font-size: 20px
-        line-height: 28px
         margin-top: 5px
       @media screen and ( max-width: 950px )
         max-width: 300px
@@ -310,6 +311,8 @@
   overflow: hidden
   @media screen and ( max-width: 1366px )
     padding: 90px 0px
+  @media screen and ( max-width: 550px )
+    padding: 20px 0px 90px 0px
   &__head
     max-width: 900px
     margin: 0 auto
@@ -324,14 +327,14 @@
       text-align: center
       margin-bottom: 25px
       @media screen and ( max-width: 1366px )
-        font-size: 28px
-        line-height: 38px
-      @media screen and ( max-width: 1100px )
         font-size: 24px
-        line-height: 30px
+        line-height: 32px
+      @media screen and ( max-width: 1100px )
+        font-size: 22px
+        line-height: 28px
       @media screen and ( max-width: 767px )
-        font-size: 20px
-        line-height: 26px
+        font-size: 18px
+        line-height: 22px
   &__bottom
     max-width: 900px
     margin: 0 auto
@@ -344,15 +347,16 @@
       font-size: 30px
       line-height: 40px
       text-align: center
+      margin-bottom: 25px
       @media screen and ( max-width: 1366px )
-        font-size: 28px
-        line-height: 38px
-      @media screen and ( max-width: 1100px )
         font-size: 24px
-        line-height: 30px
+        line-height: 32px
+      @media screen and ( max-width: 1100px )
+        font-size: 22px
+        line-height: 28px
       @media screen and ( max-width: 767px )
-        font-size: 20px
-        line-height: 26px
+        font-size: 18px
+        line-height: 22px
 
 .fly
   &-corn
