--- a/app/src/sass/components/blocks/partners.sass
+++ b/app/src/sass/components/blocks/partners.sass
@@ -1,7 +1,7 @@
 .partners
   background-color: #fcfcfc
   padding-top: 204px
-  padding-bottom: 130px
+  padding-bottom: 150px
   position: relative
   z-index: 2
   @media screen and ( max-width: 1366px )
@@ -47,7 +47,7 @@
     @media screen and ( max-width: 550px )
       width: calc(100% / 2)
       margin-bottom: 30px
-    &__href
+    &__wrapper
       display: flex
       justify-content: center
       @media screen and ( max-width: 550px )
