--- a/app/src/sass/components/blocks/products.sass
+++ b/app/src/sass/components/blocks/products.sass
@@ -113,6 +113,8 @@
       z-index: 0
       opacity: 0
       transition: all 0.4s
+      @media screen and ( max-width: 1366px )
+        transform: scale(0.75)
       &--1
         top: -40px
         left: 140px
