--- a/app/src/sass/components/pages/not-found.sass
+++ b/app/src/sass/components/pages/not-found.sass
@@ -42,8 +42,8 @@
       margin-top: 24px
     a
       color: $blue
-      border-bottom: 1px solid rgba(217,217,217,1)
+      border-bottom: 1px solid rgba(9, 58, 158, 0.15)
       transition: all 0.4s
       &:hover
-        border-bottom: 1px solid rgba(217,217,217,0)
+        border-bottom: 1px solid rgba(9, 58, 158, 0)
         transition: all 0.4s
