--- a/app/src/sass/components/blocks/video.sass
+++ b/app/src/sass/components/blocks/video.sass
@@ -15,6 +15,8 @@
       position: relative
       z-index: 1
       opacity: 0.65
+      @media screen and ( max-width: 550px )
+        display: none
     &::before
       content: ""
       width: 100%
@@ -42,7 +44,16 @@
       position: fixed
       top: 0
       left: 0
-
+  &__img
+    display: none
+    width: 100%
+    height: 100%
+    object-fit: cover
+    position: relative
+    z-index: 1
+    opacity: 0.65
+    @media screen and ( max-width: 550px )
+      display: block
   &__container
     position: relative
     z-index: 1
@@ -80,10 +91,7 @@
       line-height: 46px
     @media screen and ( max-width: 550px )
       font-size: 28px
-      line-height: 36px
-    @media screen and ( max-width: 400px )
-      font-size: 24px
-      line-height: 30px
+      line-height: 34px
 
   &__year
     font-size: 160px
@@ -99,12 +107,8 @@
       line-height: 90px
       margin-bottom: 100px
     @media screen and ( max-width: 550px )
-      font-size: 60px
-      line-height: 70px
-    @media screen and ( max-width: 400px )
-      font-size: 40px
-      line-height: 50px
-      margin-bottom: 60px
+      font-size: 52px
+      line-height: 56px
   &__text
     color: #fff
     max-width: 600px
@@ -146,9 +150,7 @@
         font-size: 60px
         margin-bottom: 10px
       @media screen and ( max-width: 550px )
-        font-size: 40px
-      @media screen and ( max-width: 400px )
-        font-size: 30px
+        font-size: 36px
     &__text
       color: #fff
       padding-left: 3px
