--- a/app/src/sass/components/blocks/news.sass
+++ b/app/src/sass/components/blocks/news.sass
@@ -26,6 +26,8 @@
       @media screen and ( max-width: 950px )
         width: calc(50% - 20px)
         margin-bottom: 30px
+        &:nth-child(3)
+          display: block
       @media screen and ( max-width: 600px )
         width: 100%
 
