--- a/app/src/sass/components/blocks/map.sass
+++ b/app/src/sass/components/blocks/map.sass
@@ -125,15 +125,16 @@
 .ymaps-2-1-78-balloon__tail
   display: none !important
 .ymaps-2-1-78-balloon__close-button
-  width: 14px!important
+  width: 11px!important
   height: 11px!important
   opacity: 1!important
   margin-right: 17px!important
   margin-top: 21px!important
   background-size: cover !important
+  transform: rotate(0deg)
   transition: all 0.4s
   &:hover
-    opacity: 0.5 !important
+    transform: rotate(90deg)
     transition: all 0.4s
 .ymaps-2-1-78-placemark-overlay
   &:focus
