--- a/app/src/sass/components/blocks/about.sass
+++ b/app/src/sass/components/blocks/about.sass
@@ -2,6 +2,7 @@
   background-color: #fcfcfc
   position: relative
   overflow: hidden
+  padding-bottom: 204px
   &__text
     max-width: 920px
     margin: 0 auto
