--- a/app/src/sass/components/blocks/news.sass
+++ b/app/src/sass/components/blocks/news.sass
@@ -25,11 +25,12 @@
         margin-bottom: 84px
       @media screen and ( max-width: 950px )
         width: calc(50% - 20px)
-        margin-bottom: 30px
+        margin-bottom: 50px
         &:nth-child(3)
           display: block
       @media screen and ( max-width: 600px )
         width: 100%
+
 
   &-list
     display: flex
@@ -54,6 +55,7 @@
         display: none
     @media screen and ( max-width: 550px )
       width: 100%
+      margin-bottom: 40px
       &:nth-child(3)
         display: block
     &__href
@@ -67,6 +69,8 @@
       align-items: flex-start
       @media screen and ( max-width: 1366px )
         padding: 0 11px
+      @media screen and ( max-width: 550px )
+        margin-top: 20px
     &__date
       display: flex
       flex-direction: column
@@ -79,7 +83,7 @@
         color: #000
         @media screen and ( max-width: 1366px )
           font-size: 50px
-        @media screen and ( max-width: 550px )
+        @media screen and ( max-width: 767px )
           font-size: 36px
       .month
         font-size: 18px
@@ -96,8 +100,8 @@
         font-size: 24px
         line-height: 28px
       @media screen and ( max-width: 767px )
-        font-size: 22px
-        line-height: 26px
+        font-size: 18px
+        line-height: 24px
       @media screen and ( max-width: 550px )
         font-size: 18px
         line-height: 24px
