--- a/app/src/sass/components/blocks/partners.sass
+++ b/app/src/sass/components/blocks/partners.sass
@@ -1,6 +1,5 @@
 .partners
   background-color: #fcfcfc
-  padding-top: 204px
   padding-bottom: 150px
   position: relative
   z-index: 2
@@ -51,7 +50,8 @@
       display: flex
       justify-content: center
       @media screen and ( max-width: 550px )
-        max-width: 60px
+        max-width: 100px
+        max-height: 100px
       img
         width: 100%
         height: 100%
