--- a/app/src/sass/components/header.sass
+++ b/app/src/sass/components/header.sass
@@ -34,6 +34,7 @@
           top: 85px
           opacity: 1
           visibility: visible
+          background-color: #fff
           transition: all 0.5s 0.2s
       a
         color: #000
@@ -45,18 +46,19 @@
   &-submenu
     position: absolute
     top: 30px
-    background-color: #fff
+    background-color: transparent
     padding: 35px 40px
     display: block
     width: auto
     left: calc(50% - 92.5px)
     opacity: 0
     visibility: hidden
-    transition: all 0.5s 0.2s
+    transition: all 0.5s
     &:hover
       top: 55px
       opacity: 1
       visibility: visible
+      background-color: #fff
       transition: all 0.5s 0.2s
     &__item
       font-size: 20px
