--- a/app/src/sass/components/popup.sass
+++ b/app/src/sass/components/popup.sass
@@ -7,7 +7,6 @@
   top: 0
   left: 0
   z-index: 100
-  transition: all 0.4s
   overflow: hidden
   &-open
     opacity: 1
@@ -223,3 +222,5 @@
     font-size: 19px
     line-height: 28px
     padding: 7px 25px 7px
+.transition
+  transition: all 0.4s
