--- a/app/src/sass/components/blocks/news.sass
+++ b/app/src/sass/components/blocks/news.sass
@@ -8,6 +8,12 @@
     @media screen and ( max-width: 1366px )
       padding-top: 87px
       padding-bottom: 93px
+    .container
+      display: flex
+      flex-direction: row
+      justify-content: space-between
+      flex-wrap: wrap
+      align-items: center
   &-page
     padding-top: 0px
     padding-bottom: 155px
